@@ -1,0 +1,23 @@
+# ----- Snapcast for Kodi -----
+
+pcm.!snapkodi {
+  type rate
+  slave {
+    pcm snapkodififo
+      format S16_LE
+      rate 48000
+  }
+  hint {
+    description "Snapcast for Kodi"
+    show on
+  }
+}
+
+pcm.!snapkodififo {
+  type file
+  slave.pcm null
+  file "/tmp/snapkodi"
+  format "raw"
+}
+
+# ----- Snapcast for Kodi -----
