@@ -1,6 +1,0 @@
-### Pulseaudio reads this file when it starts-up
-### Uncomment or add options if you know what you are doing
-
-#resample-method = soxr-vhq
-#default-sample-format = s16le
-#default-sample-rate = 48000
