@@ -2,5 +2,4 @@
     <setting id="ss_cp" default="true">1705</setting>
     <setting id="ss_ni" default="true">0</setting>
     <setting id="ss_sp" default="true">1704</setting>
-    <setting id="ss_st" default="true">AirPlay</setting>
 </settings>
